# fastflow

./: CHANGELOG.md  CLAUDE.md  README.md  pyproject.toml
docs/: getting_started.md
docs/how_it_works/: architecture.md  python_execution.md
docs/tutorials/: agent-flow.md  ai-model-dag.md  data-processing-dag.md  er-diagram.md  flowchart.md  index.md  langgraph-workflow.md  python-execution.md
examples/basic/: app.py
examples/basic/tabs/: __init__.py  agent_flow.py  ai_model_dag.py  data_dag.py  er_diagram.py  flowchart.py  langgraph.py  python_exec.py
src/fastflow/: __init__.py  api.py  callbacks.py  components.py  core.py  execution.py  headers.py  node_types.py  state.py  types.py
src/fastflow/css/: fastflow.css
src/fastflow/js/: fastflow.js
tests/: test_api.py  test_callbacks.py  test_components.py  test_types.py
